--- a/views/upload.html
+++ b/views/upload.html
@@ -1,6 +1,20 @@
 <h3 translate>Upload.Title</h3>
 
-<p><span translate>Upload.Descricao</span> <span ng-if="usuario.Wave === 1" translate>Upload.DetalheComParticipante</span> </p>
+<!-- <p><span translate>Upload.Descricao</span> <span ng-if="usuario.Wave === 1" translate>Upload.DetalheComParticipante</span> </p> -->
+
+<p>Nesta página, por favor anexe:</p>
+<ul>
+    <li>Documento de embarque:
+        <ul>
+            <li>Uma cópia do seu passaporte válido até, pelo menos 12/05/2020. </li>
+            <li>Uma cópia do certificado internacional de vacina (caso já o tenha)</li>
+            <li>Foto do seu rosto <span ng-if="usuario.Wave === 1">e do seu acompanhante </span>para cadastro</li>
+        </ul>
+    </li>
+</ul> 
+
+<p>Uma vez que a inscrição for concluída você não poderá mais alterar seus dados.</p>
+<br>
 
 <br>
 
