--- a/views/upload.html
+++ b/views/upload.html
@@ -8,7 +8,7 @@
         <ul>
             <li>Uma cópia do seu passaporte válido até, pelo menos 12/05/2020. </li>
             <li>Uma cópia do certificado internacional de vacina (caso já o tenha)</li>
-            <li>Foto do seu rosto <span ng-if="usuario.Wave === 1">e do seu acompanhante </span>para cadastro</li>
+            <!-- <li>Foto do seu rosto <span ng-if="usuario.Wave === 1">e do seu acompanhante </span>para cadastro</li> -->
         </ul>
     </li>
 </ul> 
